<resources>
    <string name="app_name">UserCenter</string>
    <string name="user_name_hint">请输入账号</string>
    <string name="psd_hint">请输入密码</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="finish_register">完成注册</string>
    <string name="un_login_text">登录/注册</string>
    <string name="login">登录</string>
    <string name="remember_psd">记住密码</string>
    <string name="user_agreement">用户协议</string>
    <string name="feedback">反馈意见</string>
    <string name="about">关于</string>
    <string name="login_out">退出登录</string>
    <string name="tv_message">消息</string>
    <string name="tv_member">会员</string>
    <string name="tv_collect">收藏</string>
    <string name="tv_history">观看历史</string>
    <string name="tv_spread">推广</string>
    <string name="tv_share">分享</string>
    <string name="tv_setting">设置</string>
    <string name="iv_avatar_des">avatar</string>

    <string name="tv_play">玩转</string>
    <string name="tv_avatar">头像</string>
    <string name="tv_nickname">昵称</string>
    <string name="username_hint">请称呼我</string>
    <string name="tv_gender">性别</string>
    <string name="tv_male">男</string>
    <string name="tv_female">女</string>
    <string name="tv_phone">手机</string>
    <string name="tv_sign">签名</string>
    <string name="sign_hint">请您填写签名</string>
    <string name="register_menu">注册</string>
    <string name="save_menu">保存</string>

</resources>
