<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch.Vertical.Common">

    <include layout="@layout/header_bar"/>

    <RelativeLayout
        android:id="@+id/mUserIconView"
        style="@style/user_info_line_style"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:paddingTop="@dimen/common_padding_middle"
        android:paddingBottom="@dimen/common_padding_middle">

        <TextView
            style="@style/user_info_label_style"
            android:text="@string/tv_avatar" />

        <ImageView
            android:id="@+id/mArrowIv"
            style="@style/WrapWrap"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/iv_des"
            android:src="@drawable/icon_arrow" />

        <ImageView
            android:id="@+id/mUserIconIv"
            android:layout_width="@dimen/common_icon_width"
            android:layout_height="@dimen/common_icon_height"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@id/mArrowIv"
            android:layout_toLeftOf="@id/mArrowIv"
            android:contentDescription="@string/iv_des"
            android:src="@drawable/icon_default_user" />
    </RelativeLayout>

    <RelativeLayout style="@style/user_info_line_style">

        <TextView
            style="@style/user_info_label_style"
            android:text="@string/tv_nickname" />

        <EditText
            android:id="@+id/mUserNameEt"
            style="@style/user_info_content_style"
            android:inputType="text"
            android:background="@null"
            android:hint="@string/username_hint"
            android:maxLength="10" />
    </RelativeLayout>

    <RelativeLayout style="@style/user_info_line_style">

        <TextView
            style="@style/user_info_label_style"
            android:text="@string/tv_gender" />

        <RadioGroup
            style="@style/WrapWrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true">

            <RadioButton
                android:id="@+id/mGenderMaleRb"
                android:layout_width="28.0dip"
                android:layout_height="28.0dip"
                android:layout_marginRight="@dimen/common_margin"
                android:background="@drawable/gender_bg_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/tv_male"
                android:textColor="@drawable/gender_text_selector"
                android:textSize="@dimen/text_middle_size"
                android:layout_marginEnd="@dimen/common_margin" />

            <RadioButton
                android:id="@+id/mGenderFemaleRb"
                android:layout_width="28.0dip"
                android:layout_height="28.0dip"
                android:background="@drawable/gender_bg_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/tv_female"
                android:textColor="@drawable/gender_text_selector"
                android:textSize="@dimen/text_middle_size" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout style="@style/user_info_line_style">

        <TextView
            style="@style/user_info_label_style"
            android:text="@string/tv_phone" />

        <TextView
            android:id="@+id/mUserMobileTv"
            style="@style/user_info_content_style" />
    </RelativeLayout>

    <RelativeLayout style="@style/user_info_line_style">

        <TextView
            style="@style/user_info_label_style"
            android:text="@string/tv_sign" />

        <EditText
            android:id="@+id/mUserSignEt"
            style="@style/user_info_content_style"
            android:background="@null"
            android:hint="@string/sign_hint"
            android:inputType="textEmailAddress" />
    </RelativeLayout>
</LinearLayout>
