<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="#46a8ba"
            app:expandedTitleMarginEnd="10dp"
            app:expandedTitleMarginStart="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv"
                android:src="@drawable/bg_me_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <ImageView
                android:id="@+id/mUserIconIv"
                android:layout_width="@dimen/common_icon_width"
                android:layout_height="@dimen/common_icon_height"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:contentDescription="@string/iv_avatar_des"
                android:src="@drawable/icon_default_user" />

            <TextView
                android:id="@+id/mUserNameTv"
                style="@style/WrapWrap"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:text="@string/un_login_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big_size" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/AppTheme"
                app:titleTextColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" >
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="我的"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout style="@style/MatchWrap.Vertical">

            <LinearLayout
                style="@style/MatchWrap.Horizontal"
                android:background="@drawable/border_bottom"
                android:paddingTop="@dimen/common_padding_middle"
                android:paddingBottom="@dimen/common_padding_middle">

                <TextView
                    android:id="@+id/mWaitPayOrderTv"
                    style="@style/MeOrderLabelStyle"
                    android:drawableTop="@mipmap/message"
                    android:text="@string/tv_message" />

                <TextView
                    android:id="@+id/mWaitConfirmOrderTv"
                    style="@style/MeOrderLabelStyle"
                    android:drawableTop="@mipmap/member"
                    android:text="@string/tv_member" />

                <TextView
                    android:id="@+id/mCompleteOrderTv"
                    style="@style/MeOrderLabelStyle"
                    android:drawableTop="@mipmap/collect"
                    android:text="@string/tv_collect" />

                <TextView
                    android:id="@+id/mAllOrderTv"
                    style="@style/MeOrderLabelStyle"
                    android:drawableTop="@mipmap/history"
                    android:text="@string/tv_history" />
            </LinearLayout>

            <TextView
                android:id="@+id/mAddressTv"
                style="@style/MeItemStyle"
                android:layout_marginTop="@dimen/common_margin"
                android:drawableStart="@mipmap/spread"
                android:drawableLeft="@mipmap/spread"
                android:drawablePadding="20dp"
                android:text="@string/tv_spread" />

            <TextView
                android:id="@+id/mShareTv"
                style="@style/MeItemStyle"
                android:drawableStart="@mipmap/share"
                android:drawableLeft="@mipmap/share"
                android:drawablePadding="20dp"
                android:text="@string/tv_share" />

            <TextView
                android:id="@+id/mSettingTv"
                style="@style/MeItemStyle"
                android:drawableStart="@mipmap/setting"
                android:drawableLeft="@mipmap/setting"
                android:drawablePadding="20dp"
                android:text="@string/tv_setting" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
